@@ -43,6 +43,9 @@ Version 1.4.23 - SVN
   - Added Solarized Light and Solarized Dark themes, by Pavneet Arora.
   - Added associative edit list option widget, with optional folder
     list selector for values
+  - Added option to use blank spacer instead of security image ("This
+    image has been removed for security reasons.") for replacing
+    unsafe images.
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
